# cloop

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/cloop/: Cargo.toml
crates/cloop/src/: input_parser.rs  input_reader.rs  lib.rs  shell.rs
examples/: simple_shell.rs
src/: input_parser.rs  input_reader.rs  lib.rs  shell.rs
xtask/: Cargo.toml
xtask/src/: main.rs
