[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Cloop - Clap in a loop (easily create a shell integrated with Clap)"
keywords = ["cli", "shell"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cloop"
readme = "README.md"
version = "0.1.0"
rust-version = "1.79"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
shlex = "1"
rustyline = { version = "15", features = ["custom-bindings", "derive"] }
regex = "1"
