[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/cloop",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
shlex = "1"
rustyline = { version = "15", features = ["custom-bindings", "derive"] }
regex = "1"

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.