[package]
name = "cloop"
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Cloop - Clap in a loop (easily create a shell integrated with Clap)"
keywords = ["cli", "shell"]
rust-version = "1.79"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
shlex = { workspace = true }
rustyline = { workspace = true }
regex = { workspace = true }
